Add button for switching to random image

--- a/index.html
+++ b/index.html
@@ -106,12 +106,20 @@
             xobj.send(null);
         }
 
+        function setRandomImage(){
+            imageListIndex = Math.floor(Math.random()*imageList.length);
+            updateDisplayedImage()
+        }
         init()
     </script>
 
 </head>
 
 <body>
+
+<div>
+    <button onclick="setRandomImage()">Random</button>
+</div>
 
 <div>
     <img id="main-image" src="">
