--- a/index.html
+++ b/index.html
@@ -61,32 +61,7 @@
                         imageUrl = "https://arachne.dainst.org/data/image/" + search_json['entities'][0]['entityId']
                     }
 
-                    setImageSrc(element, imageUrl);
-                }
-            };
-            xobj.send(null);
-        }
-
-        function setImageSrc(element, src){
-            var xobj = new XMLHttpRequest();
-            xobj.open('GET', src);
-            xobj.setRequestHeader("Accept", "image/*");
-            xobj.responseType = 'arraybuffer';
-
-            xobj.onreadystatechange = function () {
-                if (xobj.readyState == 4 && xobj.status == "200") {
-
-                    var arr = new Uint8Array( xobj.response);
-                    // Convert the int array to a binary string
-                    // We have to use apply() as we are converting an *array*
-                    // and String.fromCharCode() takes one or more single values, not
-                    // an array.
-                    var raw = String.fromCharCode.apply(null,arr);
-
-                    // This works!!!
-                    var b64=btoa(raw);
-
-                    element.src = "data:image/jpeg;base64,"+b64;
+                    element.src = imageUrl;
                 }
             };
             xobj.send(null);
