--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 10px;
+            min-width: 300px
         }
         .neighbour {
             height: 200px;
@@ -28,9 +29,9 @@
             xobj.open('GET', './output/' + selectedFile + '.neighbours.json', true); // Replace 'my_data' with the path to your file
             xobj.onreadystatechange = function () {
 
-                if (xobj.readyState == 4 && xobj.status == "200") {
+                if (xobj.readyState === 4 && xobj.status === 200) {
                     // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
-                    var json_data = JSON.parse(xobj.responseText)
+                    var json_data = JSON.parse(xobj.responseText);
                     var main_image_element = document.querySelector('#main-image');
 
                     setImage(json_data['file_name'], main_image_element);
@@ -48,9 +49,9 @@
 
         function setImage(image_name, element) {
             var xobj = new XMLHttpRequest();
-            xobj.open('GET', arachnePath + '/search?q=' + image_name)
+            xobj.open('GET', arachnePath + '/search?q=' + image_name);
             xobj.onreadystatechange = function () {
-                if (xobj.readyState == 4 && xobj.status == "200") {
+                if (xobj.readyState === 4 && xobj.status === 200) {
                     var search_json = JSON.parse(xobj.responseText);
 
                     var imageUrl;
@@ -75,7 +76,7 @@
             xobj.open('GET', './output/images_list.json', true); // Replace 'my_data' with the path to your file
             xobj.onreadystatechange = function () {
 
-                if (xobj.readyState === 4 && xobj.status == "200") {
+                if (xobj.readyState === 4 && xobj.status === 200) {
                     // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
                     imageList = JSON.parse(xobj.responseText);
                     updateDisplayedImage()
