Change to relative path

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         function setImageFingerprint(id, element){
-            element.src = 'http://localhost:5000/image_fingerprint/' + id;
+            element.src = 'data/image_fingerprint/' + id;
         }
 
         function getImageName(id, neighbourNumber){
