--- a/index.html
+++ b/index.html
@@ -2,210 +2,170 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <style>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-        .main {
-            height: 500px;
-        }
-        #main {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-bottom: 10px;
-            min-width: 300px;
-            max-height: 500px;
-        }
-        .neighbour {
-            height: 200px;
-            border: none;
-        }
-    </style>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script typeof="text/javascript">
-        var imageCount = 0;
-        var selectedImage = 0;
-        var arachnePath = "https://arachne.dainst.org/data";
 
-        function setImage(imageName, element) {
-            var xobj = new XMLHttpRequest();
-            xobj.open('GET', arachnePath + '/search?q=' + imageName);
-            xobj.onreadystatechange = function () {
-                if (xobj.readyState === 4) {
-                    if (xobj.status === 200) {
-                        var searchJson = JSON.parse(xobj.responseText);
+  <style type="text/css">
+    img#main-image {
+      height: 700px;
+    }
 
-                        var imageUrl;
+    img.neighbour {
+      max-height: 200px;
+    }
+  </style>
 
-                        if (!searchJson['entities']) {
-                            imageUrl = 'icons/key-solid.svg'
-                        }
-                        else {
-                            imageUrl = arachnePath + "/image/" + searchJson['entities'][0]['entityId']
-                        }
+  <script typeof="text/javascript">
+      var imageCount = 0;
+      var selectedImage = 0;
+      var arachnePath = 'https://arachne.dainst.org/data';
+      var flaskPath = 'data/';
 
-                        element.src = imageUrl;
-                    }
-                    else{
-                        console.dir('Status : ' + xobj.status + ' for image ' + imageName);
-                        element.src = 'icons/question-circle-solid.svg'
-                    }
-                }
-            };
-            xobj.send(null);
-        }
+      function setImage(imageName, element) {
+          var xobj = new XMLHttpRequest();
+          xobj.open('GET', arachnePath + '/search?q=' + imageName);
+          xobj.onreadystatechange = function () {
+              if (xobj.readyState === 4) {
+                  if (xobj.status === 200) {
+                      var searchJson = JSON.parse(xobj.responseText);
 
-        function getImageName(id, neighbourNumber){
-            var xobj = new XMLHttpRequest();
-            xobj.overrideMimeType("application/json");
-            xobj.open('GET', 'data/image_name/' + id, true);
-            xobj.onreadystatechange = function () {
-                if (xobj.readyState === 4 && xobj.status === 200) {
-                    var imageElement = document.querySelector('#neighbour-' + String(neighbourNumber + 1));
-                    var imageData = JSON.parse(xobj.responseText);
+                      var imageUrl;
 
-                    setImage(imageData[0], imageElement);
-                }
-            };
-            xobj.send(null);
-        }
+                      if (!searchJson['entities']) {
+                          imageUrl = 'icons/key-solid.svg'
+                      }
+                      else {
+                          imageUrl = arachnePath + '/image/' + searchJson['entities'][0]['entityId']
+                      }
 
-        function getCurrentImageNameAndNeighbours(){
-            var xobj = new XMLHttpRequest();
-            xobj.overrideMimeType("application/json");
-            xobj.open('GET', 'data/image_name_and_neighbours/' + selectedImage, true);
-            xobj.onreadystatechange = function () {	  
-                if (xobj.readyState === 4 && xobj.status === 200) {
-                    var imageData = JSON.parse(xobj.responseText);
-                    var mainImageElement = document.querySelector('#main-image');
+                      element.src = imageUrl;
+                  }
+                  else {
+                      console.dir('Status : ' + xobj.status + ' for image ' + imageName);
+                      element.src = 'icons/question-circle-solid.svg'
+                  }
+              }
+          };
+          xobj.send(null);
+      }
 
-                    setImage(imageData[0], mainImageElement);
+      function getImageName(id, neighbourNumber) {
+          var xobj = new XMLHttpRequest();
+          xobj.overrideMimeType('application/json');
+          xobj.open('GET', flaskPath + 'image_name/' + id, true);
+          xobj.onreadystatechange = function () {
+              if (xobj.readyState === 4 && xobj.status === 200) {
+                  var imageElement = document.querySelector('#neighbour-' + String(neighbourNumber + 1));
+                  var imageData = JSON.parse(xobj.responseText);
+                  setImage(imageData[0], imageElement);
+              }
+          };
+          xobj.send(null);
+      }
 
-                    for(var i = 0; i < 20; i++)
-                    {
-                        getImageName(imageData[1][i]['id'], i);
-                    }
-                }
-            };
-            xobj.send(null);
-        }
+      function getCurrentImageNameAndNeighbours() {
+          var xobj = new XMLHttpRequest();
+          xobj.overrideMimeType('application/json');
+          xobj.open('GET', flaskPath + 'image_name_and_neighbours/' + selectedImage, true);
+          xobj.onreadystatechange = function () {
+              if (xobj.readyState === 4 && xobj.status === 200) {
+                  var imageData = JSON.parse(xobj.responseText);
+                  var mainImageElement = document.querySelector('#main-image');
 
-        function init() {
+                  setImage(imageData[0], mainImageElement);
 
-            var xobj = new XMLHttpRequest();
-            xobj.overrideMimeType("application/json");
-            xobj.open('GET', 'data/image_count', true);
-            xobj.onreadystatechange = function () {
-                if (xobj.readyState === 4 && xobj.status === 200) {
-                    imageCount = JSON.parse(xobj.responseText);
-                    selectedImage = 1;
-                    getCurrentImageNameAndNeighbours()
-                }
-            };
-            xobj.send(null);
-        }
+                  for (var i = 0; i < 20; i++) {
+                      getImageName(imageData[1][i]['id'], i);
+                  }
+              }
+          };
+          xobj.send(null);
+      }
 
-        function decreaseImageIndex(){
-            selectedImage -= 1;
-            if(selectedImage < 1)
-                selectedImage = 1;
-            getCurrentImageNameAndNeighbours()
-        }
+      function init() {
+          var xobj = new XMLHttpRequest();
+          xobj.overrideMimeType('application/json');
+          xobj.open('GET', flaskPath + 'image_count', true);
+          xobj.onreadystatechange = function () {
+              if (xobj.readyState === 4 && xobj.status === 200) {
+                  imageCount = JSON.parse(xobj.responseText);
+                  selectedImage = 1;
+                  getCurrentImageNameAndNeighbours()
+              }
+          };
+          xobj.send(null);
+      }
 
-        function setRandomImage(){
-            selectedImage = Math.floor(Math.random() * imageCount);
-            getCurrentImageNameAndNeighbours()
-        }
+      function decreaseImageIndex() {
+          selectedImage -= 1;
+          if (selectedImage < 1)
+              selectedImage = 1;
+          getCurrentImageNameAndNeighbours()
+      }
 
-        function increaseImageIndex(){
-            selectedImage += 1;
-            if(selectedImage > imageCount){
-                selectedImage = imageCount
-            }
-            getCurrentImageNameAndNeighbours()
-        }
+      function setRandomImage() {
+          selectedImage = Math.floor(Math.random() * imageCount);
+          getCurrentImageNameAndNeighbours()
+      }
 
-        init()
-    </script>
+      function increaseImageIndex() {
+          selectedImage += 1;
+          if (selectedImage > imageCount) {
+              selectedImage = imageCount
+          }
+          getCurrentImageNameAndNeighbours()
+      }
+
+      init()
+  </script>
 
 </head>
 
 <body>
 
-<div>
-    <button onclick="decreaseImageIndex()">Previous</button>
-    <button onclick="setRandomImage()">Random</button>
-    <button onclick="increaseImageIndex()">Next</button>
+<div class="container-fluid">
+
+
+  <div class="row justify-content-center">
+    <img class="img-fluid" alt="Main image" id="main-image" src="">
+  </div>
+  <p>
+  <div class="row justify-content-center">
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary" onclick="decreaseImageIndex()">Previous</button>
+      <button type="button" class="btn btn-primary" onclick="setRandomImage()">Random</button>
+      <button type="button" class="btn btn-primary" onclick="increaseImageIndex()">Next</button>
+    </div>
+  </div>
+  </p>
+  <div class="row">
+    <img class="neighbour" id="neighbour-1" src="">
+    <img class="neighbour" id="neighbour-2" src="">
+    <img class="neighbour" id="neighbour-3" src="">
+    <img class="neighbour" id="neighbour-4" src="">
+    <img class="neighbour" id="neighbour-5" src="">
+    <img class="neighbour" id="neighbour-6" src="">
+    <img class="neighbour" id="neighbour-7" src="">
+    <img class="neighbour" id="neighbour-8" src="">
+    <img class="neighbour" id="neighbour-9" src="">
+    <img class="neighbour" id="neighbour-10" src="">
+    <img class="neighbour" id="neighbour-11" src="">
+    <img class="neighbour" id="neighbour-12" src="">
+    <img class="neighbour" id="neighbour-13" src="">
+    <img class="neighbour" id="neighbour-14" src="">
+    <img class="neighbour" id="neighbour-15" src="">
+    <img class="neighbour" id="neighbour-16" src="">
+    <img class="neighbour" id="neighbour-17" src="">
+    <img class="neighbour" id="neighbour-18" src="">
+    <img class="neighbour" id="neighbour-19" src="">
+    <img class="neighbour" id="neighbour-20" src="">
+  </div>
 </div>
-
-<div>
-    <img class="main" id="main-image" src="">
-
-</div>
-
-<div>
-    <span>
-        <img class="neighbour" id="neighbour-1" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-2" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-3" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-4" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-5" src="">
-    </span>
-    <span>
-    	<img class="neighbour" id="neighbour-6" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-7" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-8" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-9" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-10" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-11" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-12" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-13" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-14" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-15" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-16" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-17" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-18" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-19" src="">
-    </span>
-    <span>
-        <img class="neighbour" id="neighbour-20" src="">
-    </span>
-</div>
-
 </body>
 
 </html>
